fix: update classnames

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,6 +23,7 @@
       "@modules/*": ["./src/modules/*"],
       "@utils/*": ["./src/utils/*"],
       "@services/*": ["./src/services/*"],
+      "@styles/*": ["./src/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
